file(GLOB_RECURSE FRAMEWORK_SOURCE RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
file(GLOB_RECURSE FRAMEWORK_INLINE RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.inl)
file(GLOB_RECURSE FRAMEWORK_HEADER RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.hpp *.h)
file(GLOB_RECURSE FRAMEWORK_SHADER_VERTEX RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.vert)
file(GLOB_RECURSE FRAMEWORK_SHADER_FRAGME RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.frag)

source_group("Inline Files" FILES ${FRAMEWORK_INLINE})

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/..)

add_library(framework STATIC
        ${FRAMEWORK_SOURCE}
        ${FRAMEWORK_INLINE}
        ${FRAMEWORK_HEADER}
        ${FRAMEWORK_SHADER_VERTEX}
        ${FRAMEWORK_SHADER_FRAGME})

add_dependencies(framework imgui)