file(GLOB_RECURSE STB_SOURCE RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
file(GLOB_RECURSE STB_HEADER RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.hpp *.h)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/..)

add_library(STB STATIC
        ${STB_SOURCE}
        ${STB_HEADER})

set_target_properties(STB PROPERTIES LINKER_LANGUAGE C)